--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             id="mobile-number" 
             name="mobile" 
             required 
-            type="tel" 
+            type="number" 
             placeholder="11-digit mobile number"
             class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:border-transparent outline-none transition-all" />
           <div class="absolute right-3 top-1/2 transform -translate-y-1/2">
@@ -143,7 +143,7 @@
             id="pin-number" 
             name="pin" 
             required 
-            type="password" 
+            type="password"
             placeholder="Pin number"
             class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:border-transparent outline-none transition-all" />
           <div class="absolute right-3 top-1/2 transform -translate-y-1/2">
@@ -157,7 +157,7 @@
           </div>
         </div>
       </div>
-
+      <p class="text-xs text-red-500">By default the pin is: 123456</p>
       <!-- Login Button -->
       <div>
         <button id="login-button" type="submit"
