copyright tag added

--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@
         <a href="#" class="hover:text-gray-800">Terms & Conditions</a>
         <a href="#" class="hover:text-gray-800">Privacy Policy</a>
         <a href="#" class="hover:text-gray-800">Contact Support</a>
+        <a href="https://sadmanhafizshohan.netlify.app" class="text-xs text-center">© copyright Sadman Hafiz Shohan - 2025</a>
       </div>
+      
       <!-- Support indicator -->
-      <div class="absolute bottom-4 right-4">
+      <div class="absolute invisible md:visible lg:visible bottom-4 right-4">
         <div class="w-4 h-4 bg-teal-600 rounded-full"></div>
       </div>
     </div>
