implement logout button, prevent reload, see balance, username and acount number show

--- a/dashboard.html
+++ b/dashboard.html
@@ -98,7 +98,9 @@
             <!-- Footer Links -->
             <div class="absolute bottom-0 w-full p-4 bg-slate-900">
                 <div class="flex flex-wrap text-xs text-gray-400 space-x-4">
-                    <a href="https://sadmanhafizshohan.netlify.app" class="hover:text-white">© copyright Sadman Hafiz Shohan - 2025</a>
+                    <a href="#" class="hover:text-white">Terms</a>
+                    <a href="#" class="hover:text-white">Privacy</a>
+                    <a href="#" class="hover:text-white">Support</a>
                 </div>
             </div>
         </div>
