--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SecurePayBD - Login</title>
+
   <!-- Daisy Ui CSS -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -20,7 +21,7 @@
 
 <body class="bg-gray-50">
   <!-- login section start -->
-  <section id="full-login-section">
+  <section id="full-login-section" class="">
     <div class="min-h-screen flex">
       <!-- Left side - Promotional content -->
       <div
@@ -111,9 +112,16 @@
 
           <!-- Logo and title -->
           <div class="text-center mb-8">
+            <div
+              class="w-16 h-16 bg-gradient-to-br from-teal-600 to-blue-600 rounded-full mx-auto mb-4 flex items-center justify-center shadow-lg">
+              <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+                <path
+                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
+              </svg>
+            </div>
             <h1 class="text-3xl font-bold text-teal-700 mb-2">SecurePayBD</h1>
+            <p class="text-gray-600 text-sm">Welcome back! Please sign in to your account</p>
           </div>
-
           <!-- Full login form section -->
           <form id="login-form">
 
@@ -163,7 +171,7 @@
                 </div>
               </div>
             </div>
-            <p class="text-xs text-red-500">By default the pin is: 123456</p>
+            <p class="text-xs text-teal-600 mt-1">💡 By default the pin is: 123456</p>
             <!-- Login Button -->
             <div>
               <button id="login-button" type="submit"
@@ -186,23 +194,24 @@
 
           </form>
 
-          <!-- Footer start -->
-          <div class="absolute bottom-0 left-0 right-0 bg-white border-t border-gray-200 p-4 md:p-2 lg:p-2">
-            <div
-              class="flex flex-wrap justify-center lg:justify-start space-x-2 md:space-x-4 lg:space-x-6 text-sm text-gray-600">
-              <a href="#" class="hover:text-gray-800">Terms & Conditions</a>
-              <a href="#" class="hover:text-gray-800">Privacy Policy</a>
-              <a href="#" class="hover:text-gray-800">Contact Support</a>
-              <a href="https://sadmanhafizshohan.netlify.app" class="text-xs text-center">© copyright Sadman Hafiz
-                Shohan - 2025</a>
-            </div>
+        </div>
+      </div>
+    </div>
+    <!-- Footer start -->
+    <div class="w-full bg-white p-4 md:p-2 lg:p-2">
+      <div
+        class="flex flex-wrap justify-center lg:justify-start space-x-2 md:space-x-4 lg:space-x-6 text-xs text-gray-600">
+        <a href="#" class="hover:text-gray-800 invisible lg:visible md:visible">Terms & Conditions</a>
+        <a href="#" class="hover:text-gray-800 invisible lg:visible md:visible">Privacy Policy</a>
+        <a href="#" class="hover:text-gray-800 invisible lg:visible md:visible">Contact Support</a>
+        <a href="https://sadmanhafizshohan.netlify.app" class="text-xs text-center">© copyright Sadman Hafiz
+          Shohan - 2025</a>
+      </div>
 
-            <!-- Support indicator -->
-            <div class="absolute invisible md:visible lg:visible bottom-4 right-4">
-              <div class="w-4 h-4 bg-teal-600 rounded-full"></div>
-            </div>
-          </div>
-          <!-- Footer end -->
+      <!-- Support indicator -->
+    </div>
+
+    <!-- Footer end -->
   </section>
   <!-- login section end -->
   <!-- dashboard section start -->
@@ -428,7 +437,7 @@
                   <div class="text-center">
                     <div
                       class="w-16 h-16 bg-white bg-opacity-20 rounded-full flex items-center justify-center mx-auto mb-4">
-                      <div class="avatar">
+                      <div class="avatar avater-active">
                         <div class="ring-green-400 ring-offset-base-100 w-20 rounded-full ring-2 ring-offset-2">
                           <img src="https://img.daisyui.com/images/profile/demo/spiderperson@192.webp" />
                         </div>
@@ -585,6 +594,7 @@
   </section>
   <!-- dashboard section end -->
   <script src="./js/login.js"></script>
+  <script src="./js/dashboard.js"></script>
 </body>
 
 </html>
